<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_feedback"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.benx.droptodo.FeedbackActivity">

    <!-- 加载 Toobar -->
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 输入邮箱 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_label_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="30dp" />

        </android.support.design.widget.TextInputLayout>


        <!-- 输入反馈 -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textinputlayout_email">

            <EditText
                android:id="@+id/feedback_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_label_content"
                android:lines="10"
                android:scrollHorizontally="false"
                android:gravity="top"
                android:textSize="25dp" />

        </android.support.design.widget.TextInputLayout>


        <!-- 按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/textinputlayout_feedback"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/feedback_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_addtodo_settime"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/addtodo_add_cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/feedback_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_addtodo_settime"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/addtodo_add_submit"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
